# omnix

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  main.h
examples/checknull/: CMakeLists.txt  checknull_Module.cpp  checknull_Module.h  main.cpp
include/omnix/: omnix.h  oxclear.h  oxconfig.h  oxdefs.h  oxdetects.h  oxmacros.h  oxtypes.h
include/omnix/format/: oxcolor.h
include/omnix/log/: oxlog.h
include/omnix/test/: oxtest.h
include/omnix/time/: oxprofiler.h  oxtime.h
lib/: CMakeLists.txt  oxlib.cpp
lib/include/oxlib/: asset.h  color.h  config.h  detects.h  file.h  lib.h  macros.h  math.h  oxlib.h  result.h  time.h  types.h
modules/: CMakeLists.txt  dynamic_test_module.cpp  graphics_module.cpp  graphics_module.h  input_module.cpp  input_module.h  ui_module.cpp  ui_module.h  window_module.h  window_module_glfw.cpp  window_module_native.cpp
omnix/: common.cpp  common.h  omnix.cpp  omnix.h  zeus.cpp  zeus.h
resources/checknull/: CREDIT.TXT
sources/: omnix.cpp  oxtest.cpp  oxtime.cpp
tests/: leetcode_add_two_numbers.cpp  leetcode_longest_palindrome.cpp  leetcode_m_of_two_sorted_arrays.cpp  test1.cpp
